# agent-network-shobhit

./: .dockerignore  .env.example  .gitignore  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOY_CLOUD.md  Dockerfile  Dockerfile.cloud  Internship_Progress.md  Project_Description.txt  README.md  README_HF_SPACE.md  USER_EVALUATION.md  docker-compose.yml  mcp.cursor.json.example  pyproject.toml  render.yaml  requirements-docker.txt  requirements-teams.txt  requirements.txt  streamlit_app.py
.streamlit/: secrets.toml.example
agent_network/: __init__.py  absence.py  audit.py  bus.py  config.py  context_memory.py  memory.py  models.py  notify.py  owner_instruction_memory.py  owner_memory.py  registry.py  runtime.py  standin_policy.py  ticket_approval.py  twin.py
presentation/: Mid_Intern_Evaluation_Agent_Network.pptx
scripts/: build_mid_eval_ppt.py  deploy-render.sh  deploy-streamlit-cloud.sh  docker-build.sh  docker-entrypoint.sh  docker-run.sh  fresh-testing.sh  run_mcp_server.sh  share-demo.sh  teams-emulator.sh  teams-local-test.sh  teams-package-manifest.sh
teams_app/: manifest.json
tests/: conftest.py  test_a2a.py  test_assign_graph.py  test_context_memory.py  test_conversational.py  test_create_ticket.py  test_demo_flow.py  test_llm_text_tools.py  test_llm_tool_guards.py  test_mcp_tools.py  test_memory.py  test_message_intent.py  test_mr_from_ticket.py  test_owner_activity_audit.py  test_owner_instruction_memory.py  test_owner_intent.py  test_owner_memory.py  test_owner_rule_classifier.py  test_owner_visibility_memory.py  test_review_tasks.py  test_teams_demo_routing.py  (+4 more)
(+61 files in other folders)
