[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-network"
version = "0.1.0"
description = "Agent Social Network MVP — digital twins with MCP-style tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_network*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
